--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
 
-  <h1>Isira os dados:</h1>
+  <h1>Insira os dados:</h1>
 
   <form id="placarForm">
     <input type="text" id="usuario" placeholder="Usuário" required>
